hphp/hack/test/typecheck/unused_awaitable19.php.exp
File "unused_awaitable19.php", line 21, characters 9-17:
This expression is of type Awaitable, but it's either being discarded or used in a dangerous way before being awaited (Typing[4015])
File "unused_awaitable19.php", line 8, characters 42-56:
This is why I think it is Awaitable
